--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,10 @@ body {
   list-style-type: none;
   text-decoration: none;
 }
+.list a {
+  text-decoration: none;
+  color: inherit;
+}
 
 .section .title {
   /* margin-top: 0;
@@ -230,6 +234,7 @@ body {
   background: white;
   -webkit-transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+  border-style: none;
 }
 .menu__btn--close:hover {
   color: var(--accent-color);
@@ -329,6 +334,23 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+.main-nav .menu-btn {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .main-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+  }
+  .main-nav .menu-btn {
+    display: block;
+  }
+}
 @media (max-width: 768px) {
   .main-nav .site-nav {
     display: none;
@@ -403,6 +425,24 @@ body {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media (max-width: 1200px) {
+  .info-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-left: 96px;
+    gap: 10px;
+  }
+  .info-nav .item {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 @media (max-width: 768px) {
   .info-nav {
     display: none;
@@ -414,8 +454,10 @@ body {
 .info-nav .item a {
   color: inherit;
 }
-.info-nav .item + .item {
-  margin-left: 50px;
+@media screen and (min-width: 1200px) {
+  .info-nav .item + .item {
+    margin-left: 50px;
+  }
 }
 .info-nav .link {
   margin-right: 10px;
@@ -905,21 +947,16 @@ body {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .flex-ftr {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-  }
-}
 @media screen and (max-width: 1200px) {
   .flex-ftr {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .flex-ftr {
+    grid-template-columns: 1fr;
   }
 }
 @media screen and (min-width: 480px) {
@@ -1018,6 +1055,9 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
@@ -1034,6 +1074,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .ftr-icon {
@@ -1065,6 +1108,42 @@ body {
 .button-nav button:focus {
   background-color: var(--accent-color);
   color: var(--secondary-color);
+}
+
+@media screen and (min-width: 786px) {
+  .ftr-form {
+    grid-column: span 2;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .ftr-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .ftr-group input ::-webkit-input-placeholder {
@@ -1100,17 +1179,61 @@ body {
   outline: none;
   margin-right: 12px;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 786px) {
   .ftr-group {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 20px;
   }
 }
-@media screen and (min-width: 1200px) and (max-width: 1200px) {
+@media screen and (min-width: 786px) {
   .ftr-group {
-    margin: 0;
-    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 20px;
+  }
+}
+
+@media screen and (min-width: 786px) {
+  .base {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 190px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+@media screen and (max-width: 786px) {
+  .base .conect {
+    margin-top: 60px;
   }
 }
 
@@ -1156,6 +1279,19 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   line-height: 1.6;
+}
+@media (max-width: 767px) {
+  .section-project .button-nav {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 8px;
+  }
+  .section-project .button-nav .item:not(:last-child) {
+    margin-right: 0;
+  }
 }
 .section-project .title {
   padding: 20px 24px 4px 24px;
@@ -1217,6 +1353,12 @@ body {
   width: calc((100% - 60px) / 3);
   background: var(--secondary-color);
   border: 1px solid #EEEEEE;
+}
+@media (max-width: 480px) {
+  .project-list .project {
+    -ms-flex-preferred-size: calc((100% - 0px) / 1);
+        flex-basis: calc((100% - 0px) / 1);
+  }
 }
 
 .project {
