--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,4 +3,9 @@
     margin: 0;
     list-style-type: none;
     text-decoration: none;
+    & a {
+        text-decoration: none;
+        color: inherit;
+    }
+
 }
